# Test_for_YA

./: Dockerfile  README.md  identifier.sqlite  output.txt  pyproject.toml  queries_for_4task.py  task5.py  task_1.py  task_2.py  task_3.py  task_5.py  test_task_1.py
